# bevy_spaceship

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.local/mujoco/3.9.0/macos/: libmujoco.dylib
.local/mujoco/3.9.0/macos/mujoco.framework/Versions/A/: mujoco.tbd
.local/mujoco/3.9.0/macos/mujoco.framework/Versions/A/Resources/: Info.plist
.local/mujoco/3.9.0/macos/mujoco.framework/Versions/A/_CodeSignature/: CodeDirectory  CodeResources
crates/apollo-core/: Cargo.toml
crates/apollo-core/src/: lib.rs  model.rs  plant.rs  propulsion.rs  state.rs  timing.rs  trajectory.rs
crates/apollo-mujoco/: Cargo.toml
crates/apollo-mujoco/examples/: closed_loop_attitude.rs
crates/apollo-mujoco/src/: error.rs  lib.rs  mjcf.rs  plant.rs  propulsion.rs  rcs_actuator.rs
crates/apollo-python/: Cargo.toml
crates/apollo-python/src/: lib.rs
crates/apollo-viewer/: Cargo.toml
crates/apollo-viewer/src/: lib.rs  model.rs  propulsion_controls.rs  scene.rs  torque_couples.rs  trajectory.rs
docs/: api-reference.md  apollo_propulsion_system.md  architecture.md  development.md  quaternion_attitude_control.md  rcs_thruster_allocation_dynamics_todo.md  usage.md
examples/: README.md
examples/python/: closed_loop_attitude.py  propulsion_pulse.py
examples/rust/: closed_loop_attitude.rs  propulsion_pulse.rs
python/: README.md
python/apollo_sim/: __init__.py  _api.py
python/examples/: closed_loop_attitude.py
python/tests/: test_data_contract.py  test_native_plant.py  test_native_propulsion_plant.py  test_propulsion_data_contract.py  test_trajectory_writer.py
scripts/: mujoco_env.zsh
src/: apollo_spec.rs  apollo_timing.rs  attitude_control.rs  attitude_demo.rs  attitude_log.rs  control_env.rs  control_law.rs  lib.rs  main.rs  mujoco_dynamics.rs  spacecraft_model.rs  visualization.rs
src/attitude_control/: legacy.rs
