[workspace]
members = [
    "crates/apollo-core",
    "crates/apollo-mujoco",
    "crates/apollo-python",
    "crates/apollo-viewer",
]
default-members = [
    "crates/apollo-core",
    "crates/apollo-mujoco",
    "crates/apollo-viewer",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[workspace.dependencies]
glam = { version = "0.32.1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
