[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "apollo-sim"
version = "0.1.0"
description = "Apollo MuJoCo plant API for external controllers and learning algorithms"
readme = "python/README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.maturin]
manifest-path = "crates/apollo-python/Cargo.toml"
python-source = "python"
module-name = "apollo_sim._apollo_native"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
addopts = "-ra"
