[package]
name = "apollo-mujoco"
version.workspace = true
edition = "2024"
rust-version.workspace = true

[dependencies]
apollo-core = { path = "../apollo-core" }
glam.workspace = true
mujoco_rs = { package = "mujoco-rs", version = "5.0.0", default-features = false }
thiserror.workspace = true

[[example]]
name = "closed_loop_attitude"
path = "../../examples/rust/closed_loop_attitude.rs"
