[package]
name = "apollo-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "_apollo_native"
crate-type = ["cdylib"]
test = false
doctest = false

[dependencies]
apollo-core = { path = "../apollo-core" }
apollo-mujoco = { path = "../apollo-mujoco" }
glam.workspace = true
pyo3 = "0.28"
